# tcgjson

./: .gitignore  LICENSE  README.md  operations-constraints.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml  weekly-release.yml
data-cache/: README.md
data-cache/product-details/0/100/: 100.json
data-cache/product-details/0/101/: 101.json
data-cache/product-details/0/102/: 102.json
data-cache/product-details/0/103/: 103.json
data-cache/product-details/0/104/: 104.json
data-cache/product-details/0/105/: 105.json
data-cache/product-details/0/106/: 106.json
data-cache/product-details/0/107/: 107.json
data-cache/product-details/0/108/: 108.json
data-cache/product-details/0/109/: 109.json
data-cache/product-details/0/110/: 110.json
data-cache/product-details/0/111/: 111.json
data-cache/product-details/0/112/: 112.json
data-cache/product-details/0/113/: 113.json
docs/: api-notes.md  building-yourself.md
docs/catalog/: README.md  games.md  objects.md  release-history.md
docs/catalog/games/: digimon-card-game.md  lorcana.md  magic-the-gathering.md  one-piece.md  pokemon.md  riftbound.md  star-wars-unlimited.md  union-arena.md  yugioh.md
scripts/: build-pages-site.py  run-build-with-cache-flush.sh
src/tcgjson/: __init__.py  atomic.py  bulk.py  cli.py  config.py  docs.py  games.py  normalize.py  operations.py  schema.py  search_cache.py  tcgplayer.py  validate.py
tests/: test_bulk.py  test_docs.py  test_games.py  test_normalize.py  test_operations.py  test_pages_site.py  test_search_cache.py  test_tcgplayer.py  test_validate.py
(+106545 files in other folders)
